// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Card test Preview is ok 1`] = `
<div>
   
  <div
    class="bp3-card bp3-elevation-0 Card---card--2BXa projectCard"
  >
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws projectInfo StyledProps---padding-xlarge--DH-e"
    >
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws"
      >
        <div
          class="colorBar"
          style="background-color: rgb(230, 184, 0);"
        />
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-black--2kJn"
          style="--text-line-clamp: 1;"
        >
          test
        </p>
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6 StyledProps---font-weight-bold--22XZ"
        >
          Org Name
        </p>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---font-small--1qQz StyledProps---padding-top-medium--29t2"
          style="--text-line-clamp: 2;"
        >
          test
        </p>
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws wrap StyledProps---padding-top-small--1-XA"
        >
          <span
            class="Tag---main--1vng"
          >
            <span
              class="bp3-tag cardTags"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                tag1
              </span>
            </span>
          </span>
          <span
            class="Tag---main--1vng"
          >
            <span
              class="bp3-tag cardTags"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                tag2
              </span>
            </span>
          </span>
        </div>
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---padding-top-medium--29t2"
        >
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---padding-right-large--2vF9"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="20"
                viewBox="0 0 14 11"
                width="20"
              >
                <path
                  d="M11.2 9.9c0-.2-.1-.4-.2-.6-.3-.7-.9-1.1-2.2-1.6-.1 0-.5-.2-.5-.2-.1-.2-.3-.2-.4-.3v-.4c-.1 0-.1-.1-.2-.2.3-.1.4-.4.5-.7v-.1c.3-.2.5-.5.6-.8s.2-.6.1-1c0-.3-.1-.6-.3-.8 0-.4-.1-.9-.1-1.3v-.2c.2 0 .4-.1.6-.1.4 0 .9.1 1.2.4.3.2.6.6.7 1 0 .1 0 .2.1.3.1.3.1.8.1 1.1.1 0 .2.2.2.4s-.1.4-.1.4c0 .2-.1.4-.3.4 0 .1 0 .2-.1.2-.1.4-.4.7-.6.9v.1c0 .3-.1.5.7.8.6.5 1.8.9 2 1.4s.1.9.1.9zm-.9-.3c.3.7.2 1.1.2 1.1H0s-.1-.4.2-1.1S2 8.4 2.9 8c1-.4.9-.7.9-1.1v-.1c-.3-.3-.6-.7-.8-1.2 0-.2 0-.3-.1-.4-.2 0-.4-.3-.4-.5 0-.1-.2-.3-.1-.6 0-.3.2-.5.3-.6 0-.4 0-1 .1-1.4 0-.1 0-.2.1-.3.1-.6.4-1 .8-1.3s1-.5 1.6-.5 1.1.2 1.5.5.7.7.8 1.3c0 .1.1.2.1.3.1.4.1 1 .1 1.4v.1c.1.1.3.2.3.6 0 .2-.1.4-.1.5 0 .2-.2.5-.4.5 0 .1-.1.2-.1.3-.2.5-.5 1-.8 1.3v.1c0 .4-.1.6.9 1.1s2.4.9 2.7 1.6z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-xsmall--1PyC"
            >
              ADMIN
            </p>
          </div>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="20"
                viewBox="0 0 14 11"
                width="20"
              >
                <path
                  d="M11.2 9.9c0-.2-.1-.4-.2-.6-.3-.7-.9-1.1-2.2-1.6-.1 0-.5-.2-.5-.2-.1-.2-.3-.2-.4-.3v-.4c-.1 0-.1-.1-.2-.2.3-.1.4-.4.5-.7v-.1c.3-.2.5-.5.6-.8s.2-.6.1-1c0-.3-.1-.6-.3-.8 0-.4-.1-.9-.1-1.3v-.2c.2 0 .4-.1.6-.1.4 0 .9.1 1.2.4.3.2.6.6.7 1 0 .1 0 .2.1.3.1.3.1.8.1 1.1.1 0 .2.2.2.4s-.1.4-.1.4c0 .2-.1.4-.3.4 0 .1 0 .2-.1.2-.1.4-.4.7-.6.9v.1c0 .3-.1.5.7.8.6.5 1.8.9 2 1.4s.1.9.1.9zm-.9-.3c.3.7.2 1.1.2 1.1H0s-.1-.4.2-1.1S2 8.4 2.9 8c1-.4.9-.7.9-1.1v-.1c-.3-.3-.6-.7-.8-1.2 0-.2 0-.3-.1-.4-.2 0-.4-.3-.4-.5 0-.1-.2-.3-.1-.6 0-.3.2-.5.3-.6 0-.4 0-1 .1-1.4 0-.1 0-.2.1-.3.1-.6.4-1 .8-1.3s1-.5 1.6-.5 1.1.2 1.5.5.7.7.8 1.3c0 .1.1.2.1.3.1.4.1 1 .1 1.4v.1c.1.1.3.2.3.6 0 .2-.1.4-.1.5 0 .2-.2.5-.4.5 0 .1-.1.2-.1.3-.2.5-.5 1-.8 1.3v.1c0 .4-.1.6.9 1.1s2.4.9 2.7 1.6z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-xsmall--1PyC"
            >
              COLLABORATORS
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws moduleContainer StyledProps---border--uz_- StyledProps---border-top--3_3E StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
    >
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-right--2-OL StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 30%;"
        >
          <span
            class="bp3-icon StyledProps---main--1Wws"
          >
            <svg
              fill="none"
              height="35"
              viewBox="0 0 26 21"
              width="35"
            >
              <path
                clip-rule="evenodd"
                d="M15.201 2.9a5.325 5.325 0 00-2.498 3.256l-.34 1.273 2.656.712.34-1.273a2.615 2.615 0 013.2-1.847 2.617 2.617 0 011.847 3.2 2.614 2.614 0 01-3.199 1.847l-.03-.008-7.673-2.057a5.325 5.325 0 00-4.069.535 5.325 5.325 0 00-2.497 3.256 5.328 5.328 0 00.536 4.07 5.328 5.328 0 003.256 2.499 5.325 5.325 0 004.069-.535 5.325 5.325 0 002.498-3.256l.34-1.274-2.656-.712-.34 1.273a2.614 2.614 0 01-3.2 1.847 2.617 2.617 0 01-1.847-3.2 2.604 2.604 0 011.218-1.585 2.604 2.604 0 011.98-.262l7.704 2.066a5.325 5.325 0 004.069-.535 5.325 5.325 0 002.497-3.257 5.329 5.329 0 00-.536-4.07 5.329 5.329 0 00-3.256-2.498 5.325 5.325 0 00-4.069.534z"
                fill="url(#cd-main_svg__paint0_linear)"
                fill-rule="evenodd"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cd-main_svg__paint0_linear"
                  x1="3.557"
                  x2="8.848"
                  y1="9.622"
                  y2="18.787"
                >
                  <stop
                    stop-color="#62F91F"
                  />
                  <stop
                    offset="1"
                    stop-color="#5EAA53"
                  />
                </lineargradient>
              </defs>
            </svg>
          </span>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 70%;"
        >
          <div
            class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          >
            <div
              class="Layout---horizontal--3rmQ Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws activityChart StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
                role="spark-chart"
              >
                <div
                  class="container vertical rounded"
                >
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 100%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-medium--aOY7"
              >
                23
              </p>
            </div>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-xsmall--1f9b"
            >
              DEPLOYMENTS IN LAST 7 DAYS
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws moduleContainer StyledProps---border--uz_- StyledProps---border-top--3_3E StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
    >
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-right--2-OL StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 30%;"
        >
          <span
            class="bp3-icon StyledProps---main--1Wws"
          >
            <svg
              fill="none"
              height="30"
              viewBox="0 0 24 24"
              width="30"
            >
              <path
                clip-rule="evenodd"
                d="M10.867 21.7l.307.182a1.97 1.97 0 001.021.268c.35.002.695-.09 1.002-.268l.306-.183c4.869-2.881 7.883-8.291 7.888-14.158v-.15a2.168 2.168 0 00-1.022-1.878l-1.39-.82-6.6 10.775a.716.716 0 01-.528.245.72.72 0 01-.536-.238l-3.521-3.84a.758.758 0 01-.165-.724.733.733 0 01.529-.51.714.714 0 01.694.216l2.984 3.261 5.918-9.91-4.537-2.68a1.96 1.96 0 00-2.043 0L4.022 5.512A2.168 2.168 0 003 7.391v.15c.001 5.862 3.007 11.271 7.867 14.158z"
                fill="url(#cv-main_svg__paint0_linear)"
                fill-rule="evenodd"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cv-main_svg__paint0_linear"
                  x1="3.942"
                  x2="14.781"
                  y1="7.1"
                  y2="25.951"
                >
                  <stop
                    stop-color="#9E74FF"
                  />
                  <stop
                    offset="1"
                    stop-color="#8A36FF"
                  />
                </lineargradient>
              </defs>
            </svg>
          </span>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 70%;"
        >
          <div
            class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          >
            <div
              class="Layout---horizontal--3rmQ Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws activityChart StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
                role="spark-chart"
              >
                <div
                  class="container vertical rounded"
                >
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 100%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-medium--aOY7"
              >
                16
              </p>
            </div>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-xsmall--1f9b"
            >
              VERIFICATIONS IN LAST 7 DAYS
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Project Card test initializes ok  1`] = `
<div>
   
  <div
    class="bp3-card bp3-elevation-0 Card---card--2BXa projectCard"
  >
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws projectInfo StyledProps---padding-xlarge--DH-e"
    >
      <div
        class="Card---cardMenu--JLDc"
      >
        <div
          class="Card---dots--3qQP"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws Card---menu--3447"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws"
      >
        <div
          class="colorBar"
          style="background-color: rgb(230, 184, 0);"
        />
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-black--2kJn"
          style="--text-line-clamp: 1;"
        >
          test
        </p>
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6 StyledProps---font-weight-bold--22XZ"
        >
          Org Name
        </p>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---font-small--1qQz StyledProps---padding-top-medium--29t2"
          style="--text-line-clamp: 2;"
        >
          test
        </p>
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws wrap StyledProps---padding-top-small--1-XA"
        >
          <span
            class="Tag---main--1vng"
          >
            <span
              class="bp3-tag cardTags"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                tag1
              </span>
            </span>
          </span>
          <span
            class="Tag---main--1vng"
          >
            <span
              class="bp3-tag cardTags"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                tag2
              </span>
            </span>
          </span>
        </div>
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---padding-top-medium--29t2"
        >
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---padding-right-large--2vF9"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="20"
                viewBox="0 0 14 11"
                width="20"
              >
                <path
                  d="M11.2 9.9c0-.2-.1-.4-.2-.6-.3-.7-.9-1.1-2.2-1.6-.1 0-.5-.2-.5-.2-.1-.2-.3-.2-.4-.3v-.4c-.1 0-.1-.1-.2-.2.3-.1.4-.4.5-.7v-.1c.3-.2.5-.5.6-.8s.2-.6.1-1c0-.3-.1-.6-.3-.8 0-.4-.1-.9-.1-1.3v-.2c.2 0 .4-.1.6-.1.4 0 .9.1 1.2.4.3.2.6.6.7 1 0 .1 0 .2.1.3.1.3.1.8.1 1.1.1 0 .2.2.2.4s-.1.4-.1.4c0 .2-.1.4-.3.4 0 .1 0 .2-.1.2-.1.4-.4.7-.6.9v.1c0 .3-.1.5.7.8.6.5 1.8.9 2 1.4s.1.9.1.9zm-.9-.3c.3.7.2 1.1.2 1.1H0s-.1-.4.2-1.1S2 8.4 2.9 8c1-.4.9-.7.9-1.1v-.1c-.3-.3-.6-.7-.8-1.2 0-.2 0-.3-.1-.4-.2 0-.4-.3-.4-.5 0-.1-.2-.3-.1-.6 0-.3.2-.5.3-.6 0-.4 0-1 .1-1.4 0-.1 0-.2.1-.3.1-.6.4-1 .8-1.3s1-.5 1.6-.5 1.1.2 1.5.5.7.7.8 1.3c0 .1.1.2.1.3.1.4.1 1 .1 1.4v.1c.1.1.3.2.3.6 0 .2-.1.4-.1.5 0 .2-.2.5-.4.5 0 .1-.1.2-.1.3-.2.5-.5 1-.8 1.3v.1c0 .4-.1.6.9 1.1s2.4.9 2.7 1.6z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-xsmall--1PyC"
            >
              ADMIN
            </p>
          </div>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="20"
                viewBox="0 0 14 11"
                width="20"
              >
                <path
                  d="M11.2 9.9c0-.2-.1-.4-.2-.6-.3-.7-.9-1.1-2.2-1.6-.1 0-.5-.2-.5-.2-.1-.2-.3-.2-.4-.3v-.4c-.1 0-.1-.1-.2-.2.3-.1.4-.4.5-.7v-.1c.3-.2.5-.5.6-.8s.2-.6.1-1c0-.3-.1-.6-.3-.8 0-.4-.1-.9-.1-1.3v-.2c.2 0 .4-.1.6-.1.4 0 .9.1 1.2.4.3.2.6.6.7 1 0 .1 0 .2.1.3.1.3.1.8.1 1.1.1 0 .2.2.2.4s-.1.4-.1.4c0 .2-.1.4-.3.4 0 .1 0 .2-.1.2-.1.4-.4.7-.6.9v.1c0 .3-.1.5.7.8.6.5 1.8.9 2 1.4s.1.9.1.9zm-.9-.3c.3.7.2 1.1.2 1.1H0s-.1-.4.2-1.1S2 8.4 2.9 8c1-.4.9-.7.9-1.1v-.1c-.3-.3-.6-.7-.8-1.2 0-.2 0-.3-.1-.4-.2 0-.4-.3-.4-.5 0-.1-.2-.3-.1-.6 0-.3.2-.5.3-.6 0-.4 0-1 .1-1.4 0-.1 0-.2.1-.3.1-.6.4-1 .8-1.3s1-.5 1.6-.5 1.1.2 1.5.5.7.7.8 1.3c0 .1.1.2.1.3.1.4.1 1 .1 1.4v.1c.1.1.3.2.3.6 0 .2-.1.4-.1.5 0 .2-.2.5-.4.5 0 .1-.1.2-.1.3-.2.5-.5 1-.8 1.3v.1c0 .4-.1.6.9 1.1s2.4.9 2.7 1.6z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-xsmall--1PyC"
            >
              COLLABORATORS
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws moduleContainer StyledProps---border--uz_- StyledProps---border-top--3_3E StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
    >
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-right--2-OL StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 30%;"
        >
          <span
            class="bp3-icon StyledProps---main--1Wws"
          >
            <svg
              fill="none"
              height="35"
              viewBox="0 0 26 21"
              width="35"
            >
              <path
                clip-rule="evenodd"
                d="M15.201 2.9a5.325 5.325 0 00-2.498 3.256l-.34 1.273 2.656.712.34-1.273a2.615 2.615 0 013.2-1.847 2.617 2.617 0 011.847 3.2 2.614 2.614 0 01-3.199 1.847l-.03-.008-7.673-2.057a5.325 5.325 0 00-4.069.535 5.325 5.325 0 00-2.497 3.256 5.328 5.328 0 00.536 4.07 5.328 5.328 0 003.256 2.499 5.325 5.325 0 004.069-.535 5.325 5.325 0 002.498-3.256l.34-1.274-2.656-.712-.34 1.273a2.614 2.614 0 01-3.2 1.847 2.617 2.617 0 01-1.847-3.2 2.604 2.604 0 011.218-1.585 2.604 2.604 0 011.98-.262l7.704 2.066a5.325 5.325 0 004.069-.535 5.325 5.325 0 002.497-3.257 5.329 5.329 0 00-.536-4.07 5.329 5.329 0 00-3.256-2.498 5.325 5.325 0 00-4.069.534z"
                fill="url(#cd-main_svg__paint0_linear)"
                fill-rule="evenodd"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cd-main_svg__paint0_linear"
                  x1="3.557"
                  x2="8.848"
                  y1="9.622"
                  y2="18.787"
                >
                  <stop
                    stop-color="#62F91F"
                  />
                  <stop
                    offset="1"
                    stop-color="#5EAA53"
                  />
                </lineargradient>
              </defs>
            </svg>
          </span>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 70%;"
        >
          <div
            class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          >
            <div
              class="Layout---horizontal--3rmQ Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws activityChart StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
                role="spark-chart"
              >
                <div
                  class="container vertical rounded"
                >
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 100%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-medium--aOY7"
              >
                23
              </p>
            </div>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-xsmall--1f9b"
            >
              DEPLOYMENTS IN LAST 7 DAYS
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws moduleContainer StyledProps---border--uz_- StyledProps---border-top--3_3E StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
    >
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-right--2-OL StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 30%;"
        >
          <span
            class="bp3-icon StyledProps---main--1Wws"
          >
            <svg
              fill="none"
              height="30"
              viewBox="0 0 24 24"
              width="30"
            >
              <path
                clip-rule="evenodd"
                d="M10.867 21.7l.307.182a1.97 1.97 0 001.021.268c.35.002.695-.09 1.002-.268l.306-.183c4.869-2.881 7.883-8.291 7.888-14.158v-.15a2.168 2.168 0 00-1.022-1.878l-1.39-.82-6.6 10.775a.716.716 0 01-.528.245.72.72 0 01-.536-.238l-3.521-3.84a.758.758 0 01-.165-.724.733.733 0 01.529-.51.714.714 0 01.694.216l2.984 3.261 5.918-9.91-4.537-2.68a1.96 1.96 0 00-2.043 0L4.022 5.512A2.168 2.168 0 003 7.391v.15c.001 5.862 3.007 11.271 7.867 14.158z"
                fill="url(#cv-main_svg__paint0_linear)"
                fill-rule="evenodd"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cv-main_svg__paint0_linear"
                  x1="3.942"
                  x2="14.781"
                  y1="7.1"
                  y2="25.951"
                >
                  <stop
                    stop-color="#9E74FF"
                  />
                  <stop
                    offset="1"
                    stop-color="#8A36FF"
                  />
                </lineargradient>
              </defs>
            </svg>
          </span>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          style="width: 70%;"
        >
          <div
            class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
          >
            <div
              class="Layout---horizontal--3rmQ Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws activityChart StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
                role="spark-chart"
              >
                <div
                  class="container vertical rounded"
                >
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 100%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 80%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 60%;"
                      />
                    </div>
                  </div>
                  <div
                    class="progress-bar"
                    role="spark"
                  >
                    <div
                      class="progress-track"
                    >
                      <div
                        class="progress-fill"
                        style="height: 40%;"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-medium--aOY7"
              >
                16
              </p>
            </div>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv StyledProps---font-size-xsmall--1f9b"
            >
              VERIFICATIONS IN LAST 7 DAYS
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;
